--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <header>
-    <img src="https://www.moe.gov.sa/_layouts/15/MOE.Web/_images/logo.png" alt="شعار وزارة التعليم">
+    <img src="assets/logo.png" alt="شعار وزارة التعليم">
     <h2>الإدارة العامة للتعليم بمنطقة عسير - السلامة المدرسية - نظام رفع تقارير الإخلاء</h2>
   </header>
 
@@ -237,3 +237,4 @@
   </script>
 </body>
 </html>
+
