--- a/index.html
+++ b/index.html
@@ -2,47 +2,142 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>نظام رفع تقارير الإخلاء</title>
   <style>
-    body { font-family: 'Cairo', Tahoma, sans-serif; background: #e6f4ec; margin:0; }
-    header { background:#006c35; color:white; padding:15px; text-align:center; }
-    header img { height:50px; margin-left:10px; vertical-align:middle; }
-    .container { max-width:750px; margin:20px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1); text-align:right; }
-    label { display:block; margin-top:10px; font-weight:bold; }
-    select, input, textarea, button { width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:6px; }
-    button { background:#006c35; color:white; cursor:pointer; }
-    button:hover { background:#004d27; }
-    #status { margin-top:15px; font-weight:bold; }
-    .error { color:red; }
-    .success { color:green; }
-    .loading { color:#ff9800; font-weight:bold; }
-    .back-btn { margin-top:20px; background:#555; }
+    body {
+      font-family: 'Cairo', Tahoma, sans-serif;
+      background: #f2fdf7;
+      margin: 0;
+      color: #333;
+    }
+
+    /* ======= الهيدر ======= */
+    header {
+      background: #006c35;
+      color: white;
+      padding: 10px 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    header img {
+      height: 45px;
+    }
+    header h2 {
+      font-size: 16px;
+      line-height: 1.4;
+      margin: 0;
+      text-align: center;
+    }
+
+    /* ======= الحاوية ======= */
+    .container {
+      max-width: 95%;
+      margin: 15px auto;
+      background: white;
+      padding: 20px;
+      border-radius: 14px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    }
+
+    h3 { margin-top: 0; }
+
+    label {
+      display: block;
+      margin-top: 12px;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    select, input, textarea, button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 14px;
+      box-sizing: border-box;
+    }
+
+    textarea { resize: vertical; min-height: 80px; }
+
+    button {
+      background: #006c35;
+      color: white;
+      font-size: 15px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+      border: none;
+    }
+    button:hover, button:active {
+      background: #004d27;
+      transform: scale(0.98);
+    }
+
+    .back-btn {
+      margin-top: 15px;
+      background: #555;
+    }
     .back-btn:hover { background:#333; }
 
-    /* تنسيقات القائمة المخصصة */
+    /* ======= التنبيهات ======= */
+    #status { margin-top: 15px; font-weight: bold; font-size: 14px; }
+    .error { color: red; }
+    .success { color: green; }
+    .loading { color:#ff9800; }
+
+    /* ======= القائمة المخصصة ======= */
     .dropdown { position: relative; width: 100%; }
-    .dropdown-toggle { padding:10px; border:1px solid #ccc; border-radius:6px; background:#fff; cursor:pointer; }
-    .dropdown-menu { 
-      display:none; 
-      position:absolute; 
-      top:100%; right:0; left:0; 
-      background:#fff; 
-      border:1px solid #ccc; 
-      border-radius:6px; 
-      max-height:250px; 
-      overflow-y:auto; 
-      z-index:1000; 
+    .dropdown-toggle {
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      background: #fff;
+      cursor: pointer;
     }
-    .dropdown-menu input { 
-      width:95%; 
-      margin:5px auto; 
-      display:block; 
-      padding:6px; 
-      border:1px solid #ccc; 
-      border-radius:4px; 
+    .dropdown-menu {
+      display: none;
+      position: absolute;
+      top: 100%; right: 0; left: 0;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      max-height: 250px;
+      overflow-y: auto;
+      z-index: 1000;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
-    .dropdown-item { padding:8px 10px; cursor:pointer; }
-    .dropdown-item:hover { background:#f1f1f1; }
+    .dropdown-menu input {
+      width: 90%;
+      margin: 10px auto;
+      display: block;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    .dropdown-item {
+      padding: 12px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    .dropdown-item:hover {
+      background: #f1f1f1;
+    }
+
+    /* ======= دعم الموبايل ======= */
+    @media (max-width: 600px) {
+      header h2 {
+        font-size: 14px;
+      }
+      button {
+        font-size: 14px;
+        padding: 10px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -107,9 +202,7 @@
     </div>
 
     <p id="status"></p>
-
-    <!-- زر العودة -->
-    <button class="back-btn" onclick="goHome()">⬅️ العودة لادخال بيانات جديدة</button>
+    <button class="back-btn" onclick="goHome()">⬅️ إدخال جديد</button>
   </div>
 
   <script>
@@ -237,4 +330,3 @@
   </script>
 </body>
 </html>
-
