--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>لوحة متابعة تقارير الإخلاء</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- مكتبة Excel -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
   <style>
     body { font-family: 'Cairo', Tahoma, sans-serif; background:#f4f6f9; margin:0; }
     header { background:#006c35; color:white; padding:15px; text-align:center; display:flex; align-items:center; justify-content:center; gap:15px; }
@@ -223,18 +225,32 @@
       });
     }
 
+    // ✅ التصدير باستخدام SheetJS
     async function exportExcel(type) {
       try {
-        const res = await fetch(API_URL + "?action=export&type=" + type);
-        const data = await res.json();
-        if (data.status === "success" && data.url) {
-          window.open(data.url, "_blank");
-        } else {
-          alert("فشل التصدير، حاول مرة أخرى.");
+        const rows = type === "executed"
+          ? allData.filter(s => s[8] === "تم التنفيذ")
+          : allData.filter(s => s[8] !== "تم التنفيذ");
+
+        if (rows.length === 0) {
+          alert("لا توجد بيانات للتصدير.");
+          return;
         }
+
+        const headers = ["المدينة", "اسم المدرسة", "النوع", "حالة التنفيذ"];
+        const data = rows.map(r => [r[0], r[1], r[2], r[8]]);
+        const worksheetData = [headers, ...data];
+
+        const ws = XLSX.utils.aoa_to_sheet(worksheetData);
+        const wb = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb, ws, "Schools");
+
+        const fileName = type === "executed" ? "مدارس_منفذة.xlsx" : "مدارس_غير_منفذة.xlsx";
+        XLSX.writeFile(wb, fileName);
+
       } catch (err) {
         console.error("خطأ في التصدير", err);
-        alert("تعذر الاتصال بالخادم أثناء التصدير.");
+        alert("تعذر إنشاء ملف Excel.");
       }
     }
 
